--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<link rel="stylesheet" href="jspm_packages/github/twbs/bootstrap@3.3.5/css/bootstrap.css">
+		<title>Aurelia Movies</title>
 	</head>
 	<body aurelia-app>
 	
