--- a/public/app.html
+++ b/public/app.html
@@ -7,25 +7,20 @@
 					Movies!
 				</a>
 			</div>
+			<ul class="nav navbar-nav">
+				<li repeat.for="row of router.navigation"
+						class="${row.isActive ? 'active' : ''}">
+					<a href.bind="row.href">${row.title}</a>
+				</li>
+			</ul>
 		</div>
 	</nav>
 
-	<div class="container">
-		<table class="table">
-			<thead>
-			<tr>
-				<th>Title</th>
-				<th>Year</th>
-			</tr>
-			</thead>
-			<tbody>
-			<tr repeat.for="movie of movies">
-				<td>${movie.title}</td>
-				<td>${movie.releaseYear}</td>
-			</tr>
-			</tbody>
-		</table>
+	<div class="container" show.bind="router.isNavigating">
+		<i class="fa fa-spinner fa-spin"></i>
 	</div>
+
+	<router-view></router-view>
 
 	<compose view-model="currentDate"></compose>
 
