--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="jspm_packages/github/twbs/bootstrap@3.3.5/css/bootstrap.css">
+		<link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.4.0/css/font-awesome.css">
 		<title>Aurelia Movies</title>
 	</head>
-	<body aurelia-app>
+	<body aurelia-app="main">
 	
 	
 		<script src="jspm_packages/system.js"></script>
