--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="jspm_packages/github/twbs/bootstrap@3.3.5/css/bootstrap.css">
 		<link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.4.0/css/font-awesome.css">
+		<link rel="stylesheet" href="styles.css">
 		<title>Aurelia Movies</title>
 	</head>
 	<body aurelia-app="main">
