--- a/public/movies/list.html
+++ b/public/movies/list.html
@@ -16,6 +16,9 @@
 					<a route-href="route:details; params.bind:{id:movie.id}" class="btn btn-default">
 						Details
 					</a>
+					<a route-href="route:edit; params.bind:{id:movie.id}" class="btn btn-default">
+						Edit
+					</a>
 				</td>
 			</tr>
 			</tbody>
